@@ -82,7 +82,25 @@ _STLP_BEGIN_NAMESPACE
 // Implementation for eMbedded Visual C++ 3.0 and 4.2 (.NET)
 #if defined (_STLP_WCE)
 
-inline int _FILE_fd(const FILE *__f) { return (int)::_fileno((FILE*)__f); }
+inline int _FILE_fd(const FILE *__f)
+{
+    /* check if FILE is one of the three standard streams
+    We do this check first, because invoking _fileno() on one of them
+    causes a terminal window to be created. This also happens if you do
+    any IO on them, but merely retrieving the filedescriptor shouldn't
+    already do that.
+
+    Obviously this is pretty implementation-specific because it requires
+    that indeed the first three FDs are always the same, but that is not
+    only common but almost guaranteed. */
+    for( int __fd=0; __fd!=3; ++__fd)
+    {
+        if(__f == _getstdfilex(__fd))
+            return __fd;
+    }
+
+    return (int)::_fileno((FILE*)__f);
+}
 
 # undef _STLP_FILE_I_O_IDENTICAL
 
