@@ -1,5 +1,8 @@
 2008-01-02  Francois Dumont  <dums@users.sourceforge.net>
 
+	* src/_stdio_file.h: Apply Windows CE fix already present in trunk to
+	avoid the famous opening console issue.
+
 	* src/fstream.cpp: #1854345 bug fixed.
 
 2007-12-11  Petr Ovtchenkov  <complement@users.sourceforge.net>
